SERVER-65199 Pass  through `replanReason` when lowered stages are replanned